--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl      = "localhost"
+baseurl      = "https://blog.nss.net.ar"
 title        = "nss's Blog"
 languageCode = "en-us"
 theme        = "hello-friend-ng"
